# mataedu-poc

./: .env  .gitignore  Dockerfile  README.md  chains.py  components.py  config.py  core.py  database.py  docker-compose.yml  entities.py  env-sample  main.py  models.py  prompts.py  pyproject.toml  test-old.py  test.py  교육과정.txt  교육과정성취기준.csv
app/: docker-compose.yml  main.py  models.py
app/backend/: .dockerignore  config.py  models.py  pyproject.toml
app/backend/custom_langchain/: chains.py  models.py
app/backend/database/: database.py
app/custom_langchain/: chains.py  models.py  runnables.py
app/database/: database.py  entities.py
app/frontend/: Dockerfile  app.py  pyproject.toml
app/utils/: process_curriculum.py
backend/: Dockerfile  main.py  models.py
backend/custom_langchain/: chains.py  models.py  runnables.py
backend/data/: init.sql
backend/database/: crud.py  database.py  entities.py
backend/utils/: process_image.py  process_pdf.py
custom_langchain/: chains.py  models.py  runnables.py
data/: init.sql
data-old/: init.sql
data-old/교육과정/: curriculum.csv
database/: crud.py  database.py  entities.py
frontend/: Dockerfile  app.py
utils/: process_curriculum.py  process_image.py  process_pdf.py
문서/: 메타데이터 표준.md
산출물/: DB 스키마.md  세부단계별계획.md  세부수행계획서.md  최종산출물.md
