[project]
name = "mataedu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain==0.2.0",
    "langchain-google-genai>=1.0.0,<1.1.0",
    "numpy>=1.26.4",
    "paddleocr>=3.3.1",
    "paddlepaddle>=3.2.1",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
